Ajustando layout com media query

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"type="text/css"href="login.css">
-    
+    <link rel="stylesheet"type="text/css"href="home.css">
+
     <title>Viagem</title>
 </head>
 <body>
+
+
 
     <div class="container">
         <div class="card_yelow">
          <h1>Login</h1>
          <hr>
-         <h2>Quero me <br> cadastrar</h2>
+
+         <button class="h2">Quero me <br> cadastrar</button>
         </div>
-        
+
         <div class="card_transparent">
-          <div class="input-float">          
+          <div class="input-float">
             <input type="text" id="usuario" placeholder="Usuario">
           </div>
           <div class="input-float">
@@ -29,12 +32,11 @@
          <button>Entrar</button>
         </div>
 
+
+
         </div>
     </div>
 
-    <div class="img_login">
-        <img id="img_login" src="Img/Traveling-pana.png" >
-    </div>
 
     <footer></footer>
 </body>
